--- a/yahoobaba/index.html
+++ b/yahoobaba/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   
 </head>
 <body>
+    <div class="con">
+        <h1>Hello bro how are you</h1>
+    </div>
     
 </body>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="./video-no4.js"></script>
+<script>
+    // $(document).ready(()=>{
+    //     alert("Hello document is ready");
+    //     var a=$(".con").html();
+    //     console.log(a);
+    // });
+
+    $(function(){
+        alert("hello");
+    });
+</script>
 </html>
