--- a/yahoobaba/index.html
+++ b/yahoobaba/index.html
@@ -23,7 +23,10 @@
     // });
 
     $(function(){
-        alert("hello");
+        $('.con').css({
+            'background-color':'red',
+            'color':'white'
+        });
     });
 </script>
 </html>
